[gd_scene load_steps=6 format=2]

[ext_resource path="res://Juego/UI/HUD/BarraSalud.tscn" type="PackedScene" id=1]
[ext_resource path="res://Juego/Naves/NaveBase.gd" type="Script" id=3]
[ext_resource path="res://Juego/Proyectiles/Canion.tscn" type="PackedScene" id=4]
[ext_resource path="res://Juego/Proyectiles/ProyectilPlayer.tscn" type="PackedScene" id=6]
[ext_resource path="res://Juego/Naves/Player/impactPlayer2.ogg" type="AudioStream" id=9]

[node name="NaveBase" type="RigidBody2D"]
collision_layer = 0
collision_mask = 0
gravity_scale = 0.0
script = ExtResource( 3 )

[node name="Sprite" type="Sprite" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]

[node name="Canion" parent="." instance=ExtResource( 4 )]
position = Vector2( -2, 0 )
proyectil = ExtResource( 6 )

[node name="ImpactSFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 9 )
bus = "SFX"

[node name="BarraSalud" parent="." instance=ExtResource( 1 )]

[connection signal="body_entered" from="." to="." method="_on_Player_body_entered"]
